browser/themes/winstripe/browser/browser.css
/* ... */
#
personal
-
bookmarks
{
min
-
height
:
24px
;
}
#
print
-
preview
-
toolbar
:
not
(
:
-
moz
-
lwtheme
)
{
-
moz
-
appearance
:
toolbox
;
}
statusbarpanel
#
statusbar
-
display
{
-
moz
-
padding
-
start
:
0
;
}
#
appmenu
-
button
{
-
moz
-
appearance
:
none
;
background
:
-
moz
-
linear
-
gradient
(
rgb
(
247
182
82
)
rgb
(
215
98
10
)
95
%
)
;
background
-
clip
:
padding
-
box
;
border
-
radius
:
0
0
4px
4px
;
border
:
1px
solid
rgba
(
83
42
6
.
9
)
;
border
-
top
:
none
;
-
moz
-
box
-
shadow
:
0
1px
0
rgba
(
255
255
255
.
25
)
inset
0
0
0
1px
rgba
(
255
255
255
.
25
)
inset
;
color
:
white
;
text
-
shadow
:
0
0
1px
rgba
(
0
0
0
.
7
)
0
1px
2px
rgba
(
0
0
0
.
5
)
;
font
-
weight
:
bold
;
padding
:
.
1em
1
.
5em
.
15em
;
margin
:
0
;
}
#
appmenu
-
button
:
-
moz
-
window
-
inactive
{
background
-
image
:
none
;
border
-
color
:
rgba
(
0
0
0
.
4
)
;
}
#
appmenu
-
button
:
hover
:
not
(
:
active
)
:
not
(
[
open
]
)
{
background
-
image
:
-
moz
-
radial
-
gradient
(
center
bottom
farthest
-
side
rgba
(
252
240
89
.
5
)
10
%
rgba
(
252
240
89
0
)
70
%
)
-
moz
-
radial
-
gradient
(
center
bottom
farthest
-
side
rgb
(
236
133
0
)
rgba
(
255
229
172
0
)
)
-
moz
-
linear
-
gradient
(
rgb
(
246
170
69
)
rgb
(
209
74
0
)
95
%
)
;
border
-
color
:
rgba
(
83
42
6
.
9
)
;
-
moz
-
box
-
shadow
:
0
1px
0
rgba
(
255
255
255
.
1
)
inset
0
0
2px
1px
rgba
(
250
234
169
.
7
)
inset
0
-
1px
0
rgba
(
250
234
169
.
5
)
inset
;
}
#
appmenu
-
button
:
hover
:
active
#
appmenu
-
button
[
open
]
{
background
-
image
:
-
moz
-
linear
-
gradient
(
rgb
(
246
170
69
)
rgb
(
209
74
0
)
95
%
)
;
border
-
radius
:
0
;
-
moz
-
box
-
shadow
:
0
2px
4px
rgba
(
0
0
0
.
4
)
inset
0
1px
1px
rgba
(
0
0
0
.
2
)
inset
;
}
#
appmenu
-
button
>
.
button
-
box
{
border
-
style
:
none
;
padding
:
0
;
}
#
appmenu
-
button
>
.
button
-
box
>
.
button
-
menu
-
dropmarker
{
list
-
style
-
image
:
url
(
appmenu
-
dropmarker
.
png
)
;
width
:
auto
;
height
:
auto
;
padding
:
0
;
margin
:
0
;
-
moz
-
margin
-
start
:
.
5em
;
}
.
split
-
menuitem
-
item
[
_moz
-
menuactive
=
"
true
"
]
:
not
(
[
disabled
]
)
.
split
-
menuitem
-
menu
[
_moz
-
menuactive
=
"
true
"
]
:
not
(
[
disabled
]
)
:
-
moz
-
any
(
#
appmenuPrimaryPane
#
appmenuSecondaryPane
)
>
menu
[
_moz
-
menuactive
=
"
true
"
]
:
not
(
[
disabled
]
)
:
-
moz
-
any
(
#
appmenuPrimaryPane
#
appmenuSecondaryPane
)
>
menuitem
[
_moz
-
menuactive
=
"
true
"
]
:
not
(
[
disabled
]
)
{
background
-
color
:
-
moz
-
menuhover
;
color
:
-
moz
-
menuhovertext
;
}
.
appmenu
-
edit
-
button
{
-
moz
-
appearance
:
none
;
border
:
1px
solid
transparent
;
padding
:
2px
;
background
:
transparent
;
border
-
radius
:
3px
;
}
.
appmenu
-
edit
-
button
[
disabled
=
"
true
"
]
{
opacity
:
.
3
;
}
media
all
and
(
-
moz
-
windows
-
default
-
theme
)
{
#
appmenu
-
popup
{
-
moz
-
appearance
:
none
;
background
:
white
;
border
:
1px
solid
rgba
(
0
0
0
.
5
)
;
}
#
appmenuPrimaryPane
{
margin
-
right
:
-
1px
;
background
-
color
:
rgba
(
255
255
255
0
.
5
)
;
border
-
right
:
1px
solid
#
c4c4c5
;
padding
-
left
:
2px
;
}
#
appmenuSecondaryPane
{
-
moz
-
appearance
:
none
;
background
-
color
:
#
f1f5fb
;
-
moz
-
box
-
shadow
:
1px
0
3px
rgb
(
204
214
234
)
inset
;
border
:
0
;
padding
-
top
:
5px
;
font
-
family
:
"
Segoe
UI
Semibold
"
"
Segoe
UI
"
sans
-
serif
;
}
.
appmenu
-
menuseparator
{
-
moz
-
appearance
:
none
;
margin
-
top
:
3px
;
margin
-
bottom
:
3px
;
-
moz
-
margin
-
start
:
30px
;
padding
:
0
;
border
-
top
:
1px
solid
#
d6e5f5
;
border
-
bottom
:
none
;
}
.
appmenu
-
edit
-
button
:
not
(
[
disabled
]
)
:
hover
{
border
:
1px
solid
#
b8d6fb
;
-
moz
-
box
-
shadow
:
inset
0
0
1px
white
;
background
:
-
moz
-
linear
-
gradient
(
#
fafbfd
#
ebf3fd
)
;
-
moz
-
transition
:
.
2s
ease
-
in
;
}
}
#
appmenuSecondaryPane
-
spacer
{
min
-
height
:
1em
;
}
#
appmenu_print
#
appmenu_print_popup
.
appmenu
-
edit
-
button
#
appmenu
-
quit
{
list
-
style
-
image
:
url
(
"
appmenu
-
icons
.
png
"
)
;
}
#
appmenu
-
cut
{
-
moz
-
image
-
region
:
rect
(
0
16px
16px
0
)
;
}
#
appmenu
-
copy
{
-
moz
-
image
-
region
:
rect
(
0
32px
16px
16px
)
;
}
#
appmenu
-
paste
{
-
moz
-
image
-
region
:
rect
(
0
48px
16px
32px
)
;
}
#
appmenu_print
#
appmenu_print_popup
{
-
moz
-
image
-
region
:
rect
(
0
64px
16px
48px
)
;
}
#
appmenu
-
quit
{
-
moz
-
image
-
region
:
rect
(
0
80px
16px
64px
)
;
}
#
appmenu
-
edit
-
menuitem
{
-
moz
-
appearance
:
none
;
background
:
transparent
;
font
-
style
:
italic
;
}
#
appmenu_bookmarks
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
places
/
bookmark
.
png
"
)
;
-
moz
-
image
-
region
:
rect
(
0px
48px
16px
32px
)
;
}
#
appmenu_privateBrowsing
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
Privacy
-
16
.
png
"
)
;
}
#
appmenu_unsortedBookmarks
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
places
/
unsortedBookmarks
.
png
"
)
;
}
#
appmenu_addons
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
extensionGeneric
-
16
.
png
"
)
;
}
#
appmenu_subscribeToPage
:
not
(
[
disabled
]
)
#
appmenu_subscribeToPageMenu
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
feeds
/
feed
-
icons
-
16
.
png
"
)
;
-
moz
-
image
-
region
:
rect
(
0px
16px
16px
0px
)
;
}
#
appmenu_bookmarkThisPage
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
places
/
bookmark
.
png
"
)
;
-
moz
-
image
-
region
:
rect
(
0
16px
16px
0
)
;
}
#
titlebar
{
-
moz
-
appearance
:
-
moz
-
window
-
titlebar
;
margin
-
left
:
-
15px
;
margin
-
right
:
-
15px
;
}
#
main
-
window
[
sizemode
=
"
maximized
"
]
>
#
titlebar
{
-
moz
-
appearance
:
-
moz
-
window
-
titlebar
-
maximized
;
}
#
titlebar
-
content
{
margin
-
left
:
15px
;
margin
-
right
:
15px
;
}
media
all
and
(
-
moz
-
windows
-
classic
)
{
#
main
-
window
[
sizemode
=
"
normal
"
]
>
#
titlebar
>
#
titlebar
-
content
>
#
appmenu
-
button
-
container
{
margin
-
top
:
4px
;
}
}
/* ... */

